unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/OrderApi__Custom_Payment_Type__c.object-meta.xml
<CustomObject>
    <description>Represents additional payment types for the related stores.</description>
    <label>Payment Type</label>
    <nameField>
        <label>Payment Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>