unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/DDApi__Enable_Start_Date_Options__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Enable_Start_Date_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this will enable start date options to the end user. Default unchecked</description>
    <inlineHelpText>When checked this will enable start date options to the end user. Default unchecked</inlineHelpText>
    <label>Enable Start Date Options</label>
    <type>Checkbox</type>
</CustomField>