unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/DDApi__Require_Credit_Card_for_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Require_Credit_Card_for_First_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field will require the purchaser using direct debits to make the first payment with a credit card.</description>
    <inlineHelpText>Checking this field will require the purchaser using direct debits to make the first payment with a credit card.</inlineHelpText>
    <label>Require Credit Card for First Payment</label>
    <type>Checkbox</type>
</CustomField>