unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Auto_Post_Receipt__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Post_Receipt__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, financials (receipt, transaction etc.) will be generated immediately after successful transaction regardless of its payment status.</description>
    <inlineHelpText>When checked, financials (receipt, transaction etc.) will be generated immediately after successful transaction regardless of its payment status.</inlineHelpText>
    <label>Auto Post Receipt</label>
    <type>Checkbox</type>
</CustomField>