unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Auto_Post_SO__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Post_SO__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the sales order will be posted immediately after a successful transaction regardless of its payment status.</description>
    <inlineHelpText>When checked, the sales order will be posted immediately after a successful transaction regardless of its payment status.</inlineHelpText>
    <label>Auto Post SO</label>
    <type>Checkbox</type>
</CustomField>