unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Button_Label__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Button_Label__c</fullName>
    <description>Label used for the related custom payment type&#39;s button.</description>
    <inlineHelpText>Label used for the related custom payment type&#39;s button.</inlineHelpText>
    <label>Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>