unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Custom_Payment_Type_Template__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Custom_Payment_Type_Template__c</fullName>
    <description>Defines the name of the custom metadata type used for this Payment Type</description>
    <inlineHelpText>Defines the name of the custom metadata type used for this Custom Payment Type</inlineHelpText>
    <label>Payment Type Template</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>