unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Display_On_Backend_Checkout__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_On_Backend_Checkout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the related custom payment type is displayed on the backend payment page.</description>
    <inlineHelpText>When checked, the related custom payment type is displayed on the backend payment page.</inlineHelpText>
    <label>Display on Backend Checkout</label>
    <type>Checkbox</type>
</CustomField>