unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Order__c</fullName>
    <description>Display order number of the related payment type for the frontend payment type tabs.</description>
    <inlineHelpText>Display order number of the related payment type for the frontend payment type tabs.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>