unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Image_URL__c</fullName>
    <description>Image URL used to display an image of related custom payment type.</description>
    <inlineHelpText>Image URL used to display an image of related custom payment type.</inlineHelpText>
    <label>RESERVED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>