unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Instructions__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Instructions__c</fullName>
    <description>The text inserted here will display in the portal when the user selects this payment type.</description>
    <inlineHelpText>The text inserted here will display in the portal when the user selects this payment type.</inlineHelpText>
    <label>Instructions</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>