unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the related custom payment type is enabled.</description>
    <inlineHelpText>When checked, the related custom payment type is enabled.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>