unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Is_Test_Gateway__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Test_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the related custom payment type is displayed on the frontend checkout page.</description>
    <inlineHelpText>When checked, the related custom payment type is displayed on the frontend checkout page.</inlineHelpText>
    <label>Display on Frontend Checkout</label>
    <type>Checkbox</type>
</CustomField>