unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Label__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Label__c</fullName>
    <description>Label used for the related custom payment type tab.</description>
    <inlineHelpText>Label used for the related custom payment type tab.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>