unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Lightning_Component__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Lightning_Component__c</fullName>
    <description>API Name of the lightning component that extends the custom payment type interface.(OrderApi:CustomPaymentType).</description>
    <inlineHelpText>API Name of the lightning component that extends the custom payment type interface.(OrderApi:CustomPaymentType).</inlineHelpText>
    <label>RESERVED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>