unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Link__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Link__c</fullName>
    <description>The URL link used to redirect an end user to after selecting the related custom payment type&#39;s button.</description>
    <inlineHelpText>The URL link used to redirect an end user to after selecting the related custom payment type&#39;s button.</inlineHelpText>
    <label>Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>