unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to the related payment gateway.</description>
    <inlineHelpText>Linked to the related payment gateway.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Payment Types</relationshipLabel>
    <relationshipName>Custom_Payment_Types</relationshipName>
    <type>Lookup</type>
</CustomField>