unpackaged/main/default/objects/OrderApi__Custom_Payment_Type__c/fields/OrderApi__Store__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>**Required** Linked to the related store.</description>
    <inlineHelpText>**Required** Linked to the related store.</inlineHelpText>
    <label>Store</label>
    <referenceTo>OrderApi__Store__c</referenceTo>
    <relationshipLabel>Payment Types</relationshipLabel>
    <relationshipName>Custom_Payment_Types</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>